[package]
name = "rust-channel-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.8.1"
tokio = { version = "1.37.0", features = ["full"] }
minstant = "0.1.7"
rand = "0.8.5"


kanal = "0.1.0-pre8"
flume = "0.11.0"
async-channel = "2.2.0"
futures-channel = "0.3.30"
crossfire = "1.0.1"
thingbuf = "0.1.4"
tachyonix = "0.2.1"
postage = "0.5.0"
async-broadcast = "0.7.0"


rtrb = "0.3.0"
ringbuf = "0.3.3"
crossbeam-channel = "0.5.12"
crossbeam-queue = "0.3.11"
omango = "0.2.2"
npnc = "0.2.1"
magnetic = "2.4.1"


[profile.release]
debug = true

